chore: remove minimum test coverage check for now

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -40,4 +40,4 @@ jobs:
           flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
       - name: Testing CLI (Runs both unit and integration tests)
         run: |
-          coverage run --source=src -m pytest -v -s . && coverage report --show-missing --fail-under=75
+          coverage run --source=src -m pytest -v -s . && coverage report --show-missing
