refactor: update recipe description

--- a/recipe.yaml
+++ b/recipe.yaml
@@ -2,7 +2,7 @@
 RecipeFormatVersion: '2020-01-25'
 ComponentName: aws.greengrass.labs.database.PostgreSQL
 ComponentVersion: '1.0.0'
-ComponentDescription: 'A component that setups PostgreSQL server in a docker container'
+ComponentDescription: 'A component that provisions and manages a local PostgreSQL instance in a Docker container.'
 ComponentPublisher: Amazon
 Manifests:
   - Platform:
