feat: add shutdown lifecycle and refactor

--- a/recipe.yaml
+++ b/recipe.yaml
@@ -27,6 +27,10 @@ Manifests:
         script: |-
           export PYTHONPATH=$PYTHONPATH:{artifacts:decompressedPath}/aws-greengrass-labs-database-postgresql/
           python3 -u {artifacts:decompressedPath}/aws-greengrass-labs-database-postgresql/src/manage_postgresql.py
+      Shutdown:
+        script: |-
+          export PYTHONPATH=$PYTHONPATH:{artifacts:decompressedPath}/aws-greengrass-labs-database-postgresql/
+          python3 -u {artifacts:decompressedPath}/aws-greengrass-labs-database-postgresql/src/shutdown_component.py
     Artifacts:
       - URI: s3://aws-greengrass-labs-database-postgresql.zip
         Unarchive: ZIP
