--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -17,7 +17,7 @@ jobs:
     runs-on: ${{ matrix.config.os }}
     strategy:
       matrix:
-        python-version: [3.6]
+        python-version: ['3.10']
         config:
           - os: ubuntu-latest
           - os: macos-latest
